responsive mobile size WIP

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     </div>
                 </div>
                 <div class="col-6">
-                    <nav class="main-header--nav-menu">
+                    <nav class="main-header--nav-menu d-none d-md-flex">
                         <ul>
                             <li class="main-heder--nav-menu__item"><a href="#home">Home</a></li>
                             <li class="main-heder--nav-menu__item"><a href="#travel">+ Viajes</a></li>
@@ -32,7 +32,11 @@
                             <li class="main-heder--nav-menu__item"><a href="#protection">+ Protecciones</a></li>
                             <li class="main-heder--nav-menu__item"><a href="#benefits">+ Beneficios</a></li>
                         </ul>
-                    </div>
+                    </nav>
+                    <button id="mobile-btn" class="d-flex d-md-none">
+                        <img src="./img/dots.png" alt="">
+                        <span>Menú</span>
+                    </button>
                 </div>
             </div>
         </div>
@@ -42,10 +46,10 @@
             <div class="container-fluid">
                 <div class="card-wrapper">
                     <div class="card-wrapper--textbox">
-                        <div class="card-wrapper--texbox--group">
-                            <h3 class="card-wrapper--texbox--group__title">Disfruta el mundo de privilegios y
+                        <div class="card-wrapper--textbox--group">
+                            <h3 class="card-wrapper--textbox--group__title">Disfruta el mundo de privilegios y
                                 experiencias priceless que te mereces</h3>
-                            <button class="card-wrapper--texbox--group__btn">Aplica hoy</button>
+                            <button class="card-wrapper--textbox--group__btn">Aplica hoy</button>
                         </div>
                     </div>
                     
@@ -83,10 +87,10 @@
                 <div class="cities-slider--city--bottom">
                     <div class="container-fluid">
                         <div class="row">
-                            <div class="col-4">
+                            <div class="col-12 col-md-4">
                                 <div class="cities-slider--city--bottom__card">
                                     <div class="card-inner">
-                                        <div class="card-front-text">
+                                        <div class="card-front-text d-none d-md-block">
                                             <div class="card-icon"><img src="img/map.png" alt=""></div>
                                             <div class="card-title">Priceless<br>Cities</div>
                                             <div class="card-text">Disfruta experiencias exclusivas
@@ -105,10 +109,10 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-4">
+                            <div class="col-12 col-md-4">
                                 <div class="cities-slider--city--bottom__card">
                                     <div class="card-inner">
-                                        <div class="card-front-text">
+                                        <div class="card-front-text d-none d-md-block">
                                             <div class="card-icon"><img src="img/suitcase.png" alt=""></div>
                                             <div class="card-title">Mastercard protectioner<br>
                                                 Rewards</div>
@@ -127,10 +131,10 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-4">
+                            <div class="col-12 col-md-4">
                                 <div class="cities-slider--city--bottom__card">
                                     <div class="card-inner">
-                                        <div class="card-front-text">
+                                        <div class="card-front-text d-none d-md-block">
                                             <div class="card-icon"><img src="img/pin.png" alt=""></div>
                                             <div class="card-title">Loungekey<br></div>
                                             <div class="card-text">Viaja siempre al mejor estilo VIP en New York.</div>
@@ -184,10 +188,10 @@
                 <div class="cities-slider--city--bottom">
                     <div class="container-fluid">
                         <div class="row">
-                            <div class="col-4">
+                            <div class="col-12 col-md-4">
                                 <div class="cities-slider--city--bottom__card">
                                     <div class="card-inner">
-                                        <div class="card-front-text">
+                                        <div class="card-front-text d-none d-md-block">
                                             <div class="card-icon"><img src="img/map.png" alt=""></div>
                                             <div class="card-title">Priceless<br>Cities</div>
                                             <div class="card-text">Disfruta experiencias exclusivas
@@ -206,10 +210,10 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-4">
+                            <div class="col-12 col-md-4">
                                 <div class="cities-slider--city--bottom__card">
                                     <div class="card-inner">
-                                        <div class="card-front-text">
+                                        <div class="card-front-text d-none d-md-block">
                                             <div class="card-icon"><img src="img/suitcase.png" alt=""></div>
                                             <div class="card-title">Mastercard protectioner<br>
                                                 Rewards</div>
@@ -228,10 +232,10 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-4">
+                            <div class="col-12 col-md-4">
                                 <div class="cities-slider--city--bottom__card">
                                     <div class="card-inner">
-                                        <div class="card-front-text">
+                                        <div class="card-front-text d-none d-md-block">
                                             <div class="card-icon"><img src="img/pin.png" alt=""></div>
                                             <div class="card-title">Loungekey<br></div>
                                             <div class="card-text">Viaja siempre al mejor estilo VIP en New York.</div>
@@ -278,10 +282,10 @@
                 <div class="cities-slider--city--bottom">
                     <div class="container-fluid">
                         <div class="row">
-                            <div class="col-4">
+                            <div class="col-12 col-md-4">
                                 <div class="cities-slider--city--bottom__card">
                                     <div class="card-inner">
-                                        <div class="card-front-text">
+                                        <div class="card-front-text d-none d-md-block">
                                             <div class="card-icon"><img src="img/map.png" alt=""></div>
                                             <div class="card-title">Priceless<br>Cities</div>
                                             <div class="card-text">Disfruta experiencias exclusivas
@@ -300,10 +304,10 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-4">
+                            <div class="col-12 col-md-4">
                                 <div class="cities-slider--city--bottom__card">
                                     <div class="card-inner">
-                                        <div class="card-front-text">
+                                        <div class="card-front-text d-none d-md-block">
                                             <div class="card-icon"><img src="img/suitcase.png" alt=""></div>
                                             <div class="card-title">Mastercard Traveler<br>
                                                 Rewards</div>
@@ -323,10 +327,10 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-4">
+                            <div class="col-12 col-md-4">
                                 <div class="cities-slider--city--bottom__card">
                                     <div class="card-inner">
-                                        <div class="card-front-text">
+                                        <div class="card-front-text d-none d-md-block">
                                             <div class="card-icon"><img src="img/pin.png" alt=""></div>
                                             <div class="card-title">Loungekey<br></div>
                                             <div class="card-text">Viaja siempre al mejor estilo VIP en New York.</div>
@@ -373,10 +377,10 @@
                 <div class="cities-slider--city--bottom">
                     <div class="container-fluid">
                         <div class="row">
-                            <div class="col-4">
+                            <div class="col-12 col-md-4">
                                 <div class="cities-slider--city--bottom__card">
                                     <div class="card-inner">
-                                        <div class="card-front-text">
+                                        <div class="card-front-text d-none d-md-block">
                                             <div class="card-icon"><img src="img/map.png" alt=""></div>
                                             <div class="card-title">Priceless<br>Cities</div>
                                             <div class="card-text">Disfruta experiencias exclusivas
@@ -395,10 +399,10 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-4">
+                            <div class="col-12 col-md-4">
                                 <div class="cities-slider--city--bottom__card">
                                     <div class="card-inner">
-                                        <div class="card-front-text">
+                                        <div class="card-front-text d-none d-md-block">
                                             <div class="card-icon"><img src="img/suitcase.png" alt=""></div>
                                             <div class="card-title">Mastercard Traveler<br>
                                                 Rewards</div>
@@ -417,10 +421,10 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-4">
+                            <div class="col-12 col-md-4">
                                 <div class="cities-slider--city--bottom__card">
                                     <div class="card-inner">
-                                        <div class="card-front-text">
+                                        <div class="card-front-text d-none d-md-block">
                                             <div class="card-icon"><img src="img/pin.png" alt=""></div>
                                             <div class="card-title">Loungekey<br></div>
                                             <div class="card-text">Viaja siempre al mejor estilo VIP en New York.</div>
