--- a/index.html
+++ b/index.html
@@ -15,15 +15,27 @@
     <title>Banco BHD Leon</title>
 </head>
 <body>
+    <div id="mobile-menu" class="d-flex d-md-none">
+        <div id="mobile-menu--close">X</div>
+        <nav class="main-header--nav-menu">
+            <ul>
+                <li class="main-heder--nav-menu__item"><a href="#home">Home</a></li>
+                <li class="main-heder--nav-menu__item"><a href="#travel">+ Viajes</a></li>
+                <li class="main-heder--nav-menu__item"><a href="#services">+ Servicios VIP</a></li>
+                <li class="main-heder--nav-menu__item"><a href="#protection">+ Protecciones</a></li>
+                <li class="main-heder--nav-menu__item"><a href="#benefits">+ Beneficios</a></li>
+            </ul>
+        </nav>
+    </div>
     <header class="main-header">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-6">
+                <div class="col-3">
                     <div class="main-header--logo">
                         <img src="img/header-logo.png" alt="Banco de Leon Logo">
                     </div>
                 </div>
-                <div class="col-6">
+                <div class="col-9">
                     <nav class="main-header--nav-menu d-none d-md-flex">
                         <ul>
                             <li class="main-heder--nav-menu__item"><a href="#home">Home</a></li>
@@ -59,7 +71,7 @@
         <div id="home-bottom">
             <div class="container-fluid">
                 <div class="bottom-text">
-                    <div class="bottom-text--img animate__animated animate__backInLeft">
+                    <div class="bottom-text--img animate__animated animate__lightSpeedInLeft">
                         <img src="img/cards.png" alt="">
                     </div>
                     <h2 class="bottom-text--title">Tus tarjetas Platinum y Black BHD León Mastercard</h2>
@@ -90,7 +102,7 @@
                             <div class="col-12 col-md-4">
                                 <div class="cities-slider--city--bottom__card">
                                     <div class="card-inner">
-                                        <div class="card-front-text d-none d-md-block">
+                                        <div class="card-front-text d-none d-lg-block">
                                             <div class="card-icon"><img src="img/map.png" alt=""></div>
                                             <div class="card-title">Priceless<br>Cities</div>
                                             <div class="card-text">Disfruta experiencias exclusivas
@@ -112,7 +124,7 @@
                             <div class="col-12 col-md-4">
                                 <div class="cities-slider--city--bottom__card">
                                     <div class="card-inner">
-                                        <div class="card-front-text d-none d-md-block">
+                                        <div class="card-front-text d-none d-lg-block">
                                             <div class="card-icon"><img src="img/suitcase.png" alt=""></div>
                                             <div class="card-title">Mastercard protectioner<br>
                                                 Rewards</div>
@@ -134,7 +146,7 @@
                             <div class="col-12 col-md-4">
                                 <div class="cities-slider--city--bottom__card">
                                     <div class="card-inner">
-                                        <div class="card-front-text d-none d-md-block">
+                                        <div class="card-front-text d-none d-lg-block">
                                             <div class="card-icon"><img src="img/pin.png" alt=""></div>
                                             <div class="card-title">Loungekey<br></div>
                                             <div class="card-text">Viaja siempre al mejor estilo VIP en New York.</div>
@@ -191,7 +203,7 @@
                             <div class="col-12 col-md-4">
                                 <div class="cities-slider--city--bottom__card">
                                     <div class="card-inner">
-                                        <div class="card-front-text d-none d-md-block">
+                                        <div class="card-front-text d-none d-lg-block">
                                             <div class="card-icon"><img src="img/map.png" alt=""></div>
                                             <div class="card-title">Priceless<br>Cities</div>
                                             <div class="card-text">Disfruta experiencias exclusivas
@@ -213,7 +225,7 @@
                             <div class="col-12 col-md-4">
                                 <div class="cities-slider--city--bottom__card">
                                     <div class="card-inner">
-                                        <div class="card-front-text d-none d-md-block">
+                                        <div class="card-front-text d-none d-lg-block">
                                             <div class="card-icon"><img src="img/suitcase.png" alt=""></div>
                                             <div class="card-title">Mastercard protectioner<br>
                                                 Rewards</div>
@@ -235,7 +247,7 @@
                             <div class="col-12 col-md-4">
                                 <div class="cities-slider--city--bottom__card">
                                     <div class="card-inner">
-                                        <div class="card-front-text d-none d-md-block">
+                                        <div class="card-front-text d-none d-lg-block">
                                             <div class="card-icon"><img src="img/pin.png" alt=""></div>
                                             <div class="card-title">Loungekey<br></div>
                                             <div class="card-text">Viaja siempre al mejor estilo VIP en New York.</div>
@@ -285,7 +297,7 @@
                             <div class="col-12 col-md-4">
                                 <div class="cities-slider--city--bottom__card">
                                     <div class="card-inner">
-                                        <div class="card-front-text d-none d-md-block">
+                                        <div class="card-front-text d-none d-lg-block">
                                             <div class="card-icon"><img src="img/map.png" alt=""></div>
                                             <div class="card-title">Priceless<br>Cities</div>
                                             <div class="card-text">Disfruta experiencias exclusivas
@@ -307,7 +319,7 @@
                             <div class="col-12 col-md-4">
                                 <div class="cities-slider--city--bottom__card">
                                     <div class="card-inner">
-                                        <div class="card-front-text d-none d-md-block">
+                                        <div class="card-front-text d-none d-lg-block">
                                             <div class="card-icon"><img src="img/suitcase.png" alt=""></div>
                                             <div class="card-title">Mastercard Traveler<br>
                                                 Rewards</div>
@@ -330,7 +342,7 @@
                             <div class="col-12 col-md-4">
                                 <div class="cities-slider--city--bottom__card">
                                     <div class="card-inner">
-                                        <div class="card-front-text d-none d-md-block">
+                                        <div class="card-front-text d-none d-lg-block">
                                             <div class="card-icon"><img src="img/pin.png" alt=""></div>
                                             <div class="card-title">Loungekey<br></div>
                                             <div class="card-text">Viaja siempre al mejor estilo VIP en New York.</div>
@@ -380,7 +392,7 @@
                             <div class="col-12 col-md-4">
                                 <div class="cities-slider--city--bottom__card">
                                     <div class="card-inner">
-                                        <div class="card-front-text d-none d-md-block">
+                                        <div class="card-front-text d-none d-lg-block">
                                             <div class="card-icon"><img src="img/map.png" alt=""></div>
                                             <div class="card-title">Priceless<br>Cities</div>
                                             <div class="card-text">Disfruta experiencias exclusivas
@@ -402,7 +414,7 @@
                             <div class="col-12 col-md-4">
                                 <div class="cities-slider--city--bottom__card">
                                     <div class="card-inner">
-                                        <div class="card-front-text d-none d-md-block">
+                                        <div class="card-front-text d-none d-lg-block">
                                             <div class="card-icon"><img src="img/suitcase.png" alt=""></div>
                                             <div class="card-title">Mastercard Traveler<br>
                                                 Rewards</div>
@@ -424,7 +436,7 @@
                             <div class="col-12 col-md-4">
                                 <div class="cities-slider--city--bottom__card">
                                     <div class="card-inner">
-                                        <div class="card-front-text d-none d-md-block">
+                                        <div class="card-front-text d-none d-lg-block">
                                             <div class="card-icon"><img src="img/pin.png" alt=""></div>
                                             <div class="card-title">Loungekey<br></div>
                                             <div class="card-text">Viaja siempre al mejor estilo VIP en New York.</div>
@@ -465,6 +477,9 @@
                             <h3 class="travel-banner--box--group__title">Viajes VIP<br>Inolvidables</h3>
                         </div>
                     </div>
+                </div>
+                <div class="bottom-text--img animate__animated animate__backInLeft d-block d-md-none">
+                    <img src="img/cards.png" alt="">
                 </div>
             </div>
         </div>
@@ -593,6 +608,9 @@ Realiza tu reserva con 24 horas de antelación a través de beforeboarding.com *
                         </div>
                     </div>
                 </div>
+                <div class="bottom-text--img animate__animated animate__backInLeft d-block d-md-none">
+                    <img src="img/cards.png" alt="">
+                </div>
             </div>
         </div>
         <div id="services--mid">
@@ -644,6 +662,9 @@ Realiza tu reserva con 24 horas de antelación a través de beforeboarding.com *
                             <h3 class="protection-banner--box--group__title">La tranquilidad de estar protegido</h3>
                         </div>
                     </div>
+                </div>
+                <div class="bottom-text--img animate__animated animate__backInLeft d-block d-md-none">
+                    <img src="img/cards.png" alt="">
                 </div>
             </div>
         </div>
@@ -821,6 +842,9 @@ Alertas de Consumo Entérate al instante de tus movimientos, controla mejor tus 
                             <h3 class="benefits-banner--box--group__title">Recompensas y servicios exclusivos</h3>
                         </div>
                     </div>
+                </div>
+                <div class="bottom-text--img animate__animated animate__backInLeft d-block d-md-none">
+                    <img src="img/cards.png" alt="">
                 </div>
             </div>
         </div>
