--- a/index.html
+++ b/index.html
@@ -71,8 +71,11 @@
         <div id="home-bottom">
             <div class="container-fluid">
                 <div class="bottom-text">
-                    <div class="bottom-text--img animate__animated animate__lightSpeedInLeft">
-                        <img src="img/cards.png" alt="">
+                    <div class="bottom-text--img ">
+                        <img id="card1"src="img/tarjetas4.png" alt="" class="animate__animated animate__slideInLeft">
+                        <img id="card2"src="img/tarjetas3.png" alt="" class="animate__animated animate__slideInLeft">
+                        <img id="card3"src="img/tarjetas2.png" alt="" class="animate__animated animate__slideInLeft">
+                        <img id="card4"src="img/tarjetas1.png" alt="" class="animate__animated animate__slideInLeft">
                     </div>
                     <h2 class="bottom-text--title">Tus tarjetas Platinum y Black BHD León Mastercard</h2>
                     <p class="bottom-text--text">te ofrecen increíbles ofertas y beneficios al viajar a tus lugares favoritos en Estados Unidos, Europa, Asia o cualquier lugar del mundo.</p>
@@ -478,8 +481,11 @@
                         </div>
                     </div>
                 </div>
-                <div class="bottom-text--img animate__animated animate__backInLeft d-block d-md-none">
-                    <img src="img/cards.png" alt="">
+                <div class="bottom-text--img  d-block d-md-none">
+                    <img id="card1"src="img/tarjetas4.png" alt="" class="animate__animated animate__slideInLeft">
+                        <img id="card2"src="img/tarjetas3.png" alt="" class="animate__animated animate__slideInLeft">
+                        <img id="card3"src="img/tarjetas2.png" alt="" class="animate__animated animate__slideInLeft">
+                        <img id="card4"src="img/tarjetas1.png" alt="" class="animate__animated animate__slideInLeft">
                 </div>
             </div>
         </div>
@@ -608,8 +614,11 @@ Realiza tu reserva con 24 horas de antelación a través de beforeboarding.com *
                         </div>
                     </div>
                 </div>
-                <div class="bottom-text--img animate__animated animate__backInLeft d-block d-md-none">
-                    <img src="img/cards.png" alt="">
+                <div class="bottom-text--img  d-block d-md-none">
+                    <img id="card1"src="img/tarjetas4.png" alt="" class="animate__animated animate__slideInLeft">
+                        <img id="card2"src="img/tarjetas3.png" alt="" class="animate__animated animate__slideInLeft">
+                        <img id="card3"src="img/tarjetas2.png" alt="" class="animate__animated animate__slideInLeft">
+                        <img id="card4"src="img/tarjetas1.png" alt="" class="animate__animated animate__slideInLeft">
                 </div>
             </div>
         </div>
@@ -663,8 +672,11 @@ Realiza tu reserva con 24 horas de antelación a través de beforeboarding.com *
                         </div>
                     </div>
                 </div>
-                <div class="bottom-text--img animate__animated animate__backInLeft d-block d-md-none">
-                    <img src="img/cards.png" alt="">
+                <div class="bottom-text--img  d-block d-md-none">
+                    <img id="card1"src="img/tarjetas4.png" alt="" class="animate__animated animate__slideInLeft">
+                        <img id="card2"src="img/tarjetas3.png" alt="" class="animate__animated animate__slideInLeft">
+                        <img id="card3"src="img/tarjetas2.png" alt="" class="animate__animated animate__slideInLeft">
+                        <img id="card4"src="img/tarjetas1.png" alt="" class="animate__animated animate__slideInLeft">
                 </div>
             </div>
         </div>
@@ -843,8 +855,11 @@ Alertas de Consumo Entérate al instante de tus movimientos, controla mejor tus 
                         </div>
                     </div>
                 </div>
-                <div class="bottom-text--img animate__animated animate__backInLeft d-block d-md-none">
-                    <img src="img/cards.png" alt="">
+                <div class="bottom-text--img d-block d-md-none">
+                    <img id="card1"src="img/tarjetas4.png" alt="" class="animate__animated animate__slideInLeft">
+                        <img id="card2"src="img/tarjetas3.png" alt="" class="animate__animated animate__slideInLeft">
+                        <img id="card3"src="img/tarjetas2.png" alt="" class="animate__animated animate__slideInLeft">
+                        <img id="card4"src="img/tarjetas1.png" alt="" class="animate__animated animate__slideInLeft">
                 </div>
             </div>
         </div>
