flip effect and responsive adjustments

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                         <div class="row">
                             <div class="col-12 col-md-4">
                                 <div class="cities-slider--city--bottom__card">
-                                    <div class="card-inner">
+                                    <div class="card-inner flip-effect">
                                         <div class="card-front-text d-none d-lg-block">
                                             <div class="card-icon"><img src="img/map.png" alt=""></div>
                                             <div class="card-title">Priceless<br>Cities</div>
@@ -126,7 +126,7 @@
                             </div>
                             <div class="col-12 col-md-4">
                                 <div class="cities-slider--city--bottom__card">
-                                    <div class="card-inner">
+                                    <div class="card-inner flip-effect">
                                         <div class="card-front-text d-none d-lg-block">
                                             <div class="card-icon"><img src="img/suitcase.png" alt=""></div>
                                             <div class="card-title">Mastercard protectioner<br>
@@ -148,7 +148,7 @@
                             </div>
                             <div class="col-12 col-md-4">
                                 <div class="cities-slider--city--bottom__card">
-                                    <div class="card-inner">
+                                    <div class="card-inner flip-effect">
                                         <div class="card-front-text d-none d-lg-block">
                                             <div class="card-icon"><img src="img/pin.png" alt=""></div>
                                             <div class="card-title">Loungekey<br></div>
@@ -205,7 +205,7 @@
                         <div class="row">
                             <div class="col-12 col-md-4">
                                 <div class="cities-slider--city--bottom__card">
-                                    <div class="card-inner">
+                                    <div class="card-inner flip-effect">
                                         <div class="card-front-text d-none d-lg-block">
                                             <div class="card-icon"><img src="img/map.png" alt=""></div>
                                             <div class="card-title">Priceless<br>Cities</div>
@@ -227,7 +227,7 @@
                             </div>
                             <div class="col-12 col-md-4">
                                 <div class="cities-slider--city--bottom__card">
-                                    <div class="card-inner">
+                                    <div class="card-inner flip-effect">
                                         <div class="card-front-text d-none d-lg-block">
                                             <div class="card-icon"><img src="img/suitcase.png" alt=""></div>
                                             <div class="card-title">Mastercard protectioner<br>
@@ -249,7 +249,7 @@
                             </div>
                             <div class="col-12 col-md-4">
                                 <div class="cities-slider--city--bottom__card">
-                                    <div class="card-inner">
+                                    <div class="card-inner flip-effect">
                                         <div class="card-front-text d-none d-lg-block">
                                             <div class="card-icon"><img src="img/pin.png" alt=""></div>
                                             <div class="card-title">Loungekey<br></div>
@@ -299,7 +299,7 @@
                         <div class="row">
                             <div class="col-12 col-md-4">
                                 <div class="cities-slider--city--bottom__card">
-                                    <div class="card-inner">
+                                    <div class="card-inner flip-effect">
                                         <div class="card-front-text d-none d-lg-block">
                                             <div class="card-icon"><img src="img/map.png" alt=""></div>
                                             <div class="card-title">Priceless<br>Cities</div>
@@ -321,7 +321,7 @@
                             </div>
                             <div class="col-12 col-md-4">
                                 <div class="cities-slider--city--bottom__card">
-                                    <div class="card-inner">
+                                    <div class="card-inner flip-effect">
                                         <div class="card-front-text d-none d-lg-block">
                                             <div class="card-icon"><img src="img/suitcase.png" alt=""></div>
                                             <div class="card-title">Mastercard Traveler<br>
@@ -344,7 +344,7 @@
                             </div>
                             <div class="col-12 col-md-4">
                                 <div class="cities-slider--city--bottom__card">
-                                    <div class="card-inner">
+                                    <div class="card-inner flip-effect">
                                         <div class="card-front-text d-none d-lg-block">
                                             <div class="card-icon"><img src="img/pin.png" alt=""></div>
                                             <div class="card-title">Loungekey<br></div>
@@ -394,7 +394,7 @@
                         <div class="row">
                             <div class="col-12 col-md-4">
                                 <div class="cities-slider--city--bottom__card">
-                                    <div class="card-inner">
+                                    <div class="card-inner flip-effect">
                                         <div class="card-front-text d-none d-lg-block">
                                             <div class="card-icon"><img src="img/map.png" alt=""></div>
                                             <div class="card-title">Priceless<br>Cities</div>
@@ -416,7 +416,7 @@
                             </div>
                             <div class="col-12 col-md-4">
                                 <div class="cities-slider--city--bottom__card">
-                                    <div class="card-inner">
+                                    <div class="card-inner flip-effect">
                                         <div class="card-front-text d-none d-lg-block">
                                             <div class="card-icon"><img src="img/suitcase.png" alt=""></div>
                                             <div class="card-title">Mastercard Traveler<br>
@@ -438,7 +438,7 @@
                             </div>
                             <div class="col-12 col-md-4">
                                 <div class="cities-slider--city--bottom__card">
-                                    <div class="card-inner">
+                                    <div class="card-inner flip-effect">
                                         <div class="card-front-text d-none d-lg-block">
                                             <div class="card-icon"><img src="img/pin.png" alt=""></div>
                                             <div class="card-title">Loungekey<br></div>
