modifying cards animation

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         <div class="card-wrapper--textbox--group">
                             <h3 class="card-wrapper--textbox--group__title">Disfruta el mundo de privilegios y
                                 experiencias priceless que te mereces</h3>
-                            <button class="card-wrapper--textbox--group__btn">Aplica hoy</button>
+                            <button class="card-wrapper--textbox--group__btn"><a href="https://www.bhdleon.com.do/wps/portal/BHD/Inicio/bancapersona/Productos/!ut/p/z1/tVNdb4IwFP0r-uAjaYEi8Gj25eYWEtym9MVcSsEqFCydbv_eumzZk5LF0Jf25p6ec9LegyhaIiphLwrQopZQmjqh4xUJb_EjIfbsYXqP8cR59sJ5HMU3U4LeEUW0YSJDSZh7AQYvsHLg2CIM21aQp5nl2jbYue8EfOyc0EzqRq9Rkq6zERZSMFGPcAqSwaDhqjW6I6xBbbiG9u_EFM-ENshG1dkH07XptWBV0GquGKhskJbAtmjR5ZiaNj6zJtjcp9-QMwyzudcBiH4BF0QSY9I_b9JHi73gB_Qma1WZX5j_85GnXQqhc6VCB73XJ70T-b3SE3Il_dOl-TiNoEmV2Ox2dGLCUEvNPzVa9pOGpqoC98vaxsHhNV8X1erlzvV-trIYDo9-8xGh/dz/d5/L2dBISEvZ0FBIS9nQSEh/" target="_blank">Conocé más</a></button>
                         </div>
                     </div>
                     
@@ -71,11 +71,11 @@
         <div id="home-bottom">
             <div class="container-fluid">
                 <div class="bottom-text">
-                    <div class="bottom-text--img ">
-                        <img id="card1"src="img/tarjetas4.png" alt="" class="animate__animated animate__slideInLeft">
-                        <img id="card2"src="img/tarjetas3.png" alt="" class="animate__animated animate__slideInLeft">
-                        <img id="card3"src="img/tarjetas2.png" alt="" class="animate__animated animate__slideInLeft">
-                        <img id="card4"src="img/tarjetas1.png" alt="" class="animate__animated animate__slideInLeft">
+                    <div class="bottom-text--img">
+                        <img id="card1"src="img/tarjetas4.png" alt="" class="cards animate__animated">
+                        <img id="card2"src="img/tarjetas3.png" alt="" class="cards animate__animated">
+                        <img id="card3"src="img/tarjetas2.png" alt="" class="cards animate__animated">
+                        <img id="card4"src="img/tarjetas1.png" alt="" class="cards animate__animated">
                     </div>
                     <h2 class="bottom-text--title">Tus tarjetas Platinum y Black BHD León Mastercard</h2>
                     <p class="bottom-text--text">te ofrecen increíbles ofertas y beneficios al viajar a tus lugares favoritos en Estados Unidos, Europa, Asia o cualquier lugar del mundo.</p>
